cope with erratic image, but not work..